cmake_minimum_required(VERSION 3.24)
project(AoC2023)

set(CMAKE_CXX_STANDARD 17)

add_executable(AoC2023 main.cpp Vector2.cpp Vector3.cpp Vector2Int.cpp Day1.cpp Day2.cpp Day3.cpp Day4.cpp Day5.cpp Day6.cpp Day7.cpp Day8.cpp Day9.cpp Day10.cpp Day11.cpp Day12.cpp Day13.cpp Day14.cpp Day15.cpp Day16.cpp Day17.cpp Day18.cpp Day19.cpp Day20.cpp Day21.cpp Day22.cpp Day23.cpp Day24.cpp Day25.cpp)
