cmake_minimum_required(VERSION 3.24)
project(AoC2023)

set(CMAKE_CXX_STANDARD 17)

add_executable(AoC2023 main.cpp days/Vector2.cpp days/Vector3.cpp days/Vector2Int.cpp days/Day1.cpp days/Day2.cpp days/Day3.cpp days/Day4.cpp days/Day5.cpp days/Day6.cpp days/Day7.cpp days/Day8.cpp days/Day9.cpp days/Day10.cpp days/Day11.cpp days/Day12.cpp days/Day13.cpp days/Day14.cpp days/Day15.cpp days/Day16.cpp days/Day17.cpp days/Day18.cpp days/Day19.cpp days/Day20.cpp days/Day21.cpp days/Day22.cpp days/Day23.cpp days/Day24.cpp days/Day25.cpp)
